objects/ChargentSFA__Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IMAGE(IF(ChargentSFA__Response_Status__c=&apos;Approved&apos; &amp;&amp; OR(ISPICKVAL(ChargentSFA__Type__c, &apos;Charge&apos;), ISPICKVAL(ChargentSFA__Type__c, &apos;Client Referral Credit&apos;)), &quot;/img/samples/flag_green.gif&quot;,
(IF(ChargentSFA__Response_Status__c=&apos;Approved&apos; &amp;&amp; OR(ISPICKVAL(ChargentSFA__Type__c, &apos;Void&apos;), ISPICKVAL(ChargentSFA__Type__c, &apos;Refund&apos;)), &quot;/img/samples/flag_yellow.gif&quot;,
&quot;/img/samples/flag_red.gif&quot;
))), &quot;Status Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Green = Approved Charge
Yellow = Approved Refund or Void
Red = Error/Declined</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_UP__c</fullName>
        <formula>IF( NOT(ISBLANK(Opportunity_Sales_Rep__c)) &amp;&amp; ISBLANK(Opportunity_2nd_Sales_Rep__c),
FALSE, IF( NOT(ISBLANK(Opportunity_Sales_Rep__c)) &amp;&amp; NOT(ISBLANK(Opportunity_2nd_Sales_Rep__c)) &amp;&amp; 

AND(
Opportunity_2nd_Sales_Rep__c != &apos;Kambria Stephen&apos;,
Opportunity_2nd_Sales_Rep__c != &apos;Nicolo Nisbett&apos;,
Opportunity_2nd_Sales_Rep__c != &apos;Leah Pocoroba&apos;,
Opportunity_2nd_Sales_Rep__c != &apos;Mike Ciuffetelli&apos;)


, TRUE, FALSE)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T-UP w/ 2nd Sales Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_UP_w_BA__c</fullName>
        <formula>IF( NOT(ISBLANK(Opportunity_Sales_Rep__c)) &amp;&amp; ISBLANK(Opportunity_2nd_Sales_Rep__c),
FALSE, IF( NOT(ISBLANK(Opportunity_Sales_Rep__c)) &amp;&amp; NOT(ISBLANK(Opportunity_2nd_Sales_Rep__c)) &amp;&amp;  Opportunity_2nd_Sales_Rep__c != &apos;Kambria Stephen&apos; &amp;&amp;

OR(
Opportunity_2nd_Sales_Rep__c = &apos;Nicolo Nisbett&apos;,
Opportunity_2nd_Sales_Rep__c = &apos;Leah Pocoroba&apos;,
Opportunity_2nd_Sales_Rep__c = &apos;Chance Truscott&apos;,
Opportunity_2nd_Sales_Rep__c = &apos;Josh Heers&apos;,
Opportunity_2nd_Sales_Rep__c = &apos;Mike Ciuffetelli&apos;)


, TRUE, FALSE)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T-UP w/ BA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_date__c</fullName>
        <formula>DATEVALUE( ChargentSFA__Gateway_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>ChargentSFA__Response__c</columns>
        <columns>ChargentSFA__Response_Status__c</columns>
        <columns>ChargentSFA__Type__c</columns>
        <columns>ChargentSFA__Description__c</columns>
        <columns>ChargentSFA__Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Client__c</field>
            <operation>contains</operation>
            <value>Burge,Matthew L.</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ChargentSFA__All_Chargent_Transactions</fullName>
        <columns>NAME</columns>
        <columns>ChargentSFA__Gateway__c</columns>
        <columns>ChargentSFA__Opportunity__c</columns>
        <columns>ChargentSFA__Gateway_ID__c</columns>
        <columns>ChargentSFA__Credit_Card_Type__c</columns>
        <columns>ChargentSFA__Amount__c</columns>
        <columns>ChargentSFA__Type__c</columns>
        <columns>ChargentSFA__Response_Status__c</columns>
        <columns>ChargentSFA__Response_Message__c</columns>
        <columns>ChargentSFA__Recurring__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Chargent (All Transactions)</label>
    </listViews>
    <nameField>
        <displayFormat>TRX-{000000000}</displayFormat>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Create_Manual_Tx</fullName>
        <active>true</active>
        <description>User does not have permission to create a transaction with a manual payment method.</description>
        <errorConditionFormula>$Permission.AllowManualTransactionPaymentType = FALSE &amp;&amp;

AND(
ISCHANGED( ChargentSFA__Payment_Method__c),
OR(
TEXT(ChargentSFA__Payment_Method__c)     = &apos;Check&apos;, TEXT(ChargentSFA__Payment_Method__c)     = &apos;Cash&apos;, 
TEXT(ChargentSFA__Payment_Method__c)     = &apos;Wire Transfer&apos;))</errorConditionFormula>
        <errorMessage>You do not have permission to create a transaction with a manual payment method. (Check, Cash, Wire)</errorMessage>
    </validationRules>
</CustomObject>